feat:add pdp in mobile

--- a/store/blocks/global/components/rich-text.jsonc
+++ b/store/blocks/global/components/rich-text.jsonc
@@ -351,5 +351,24 @@
       "text": "inicio / mac",
       "blockClass": "global__mac--breadCrumb"
     }
+  },
+  // pdp
+  "rich-text#pdp__description--text": {
+    "title": "breadCrumb",
+    "props": {
+      "textAlignment": "LEFT",
+      "textPosition": "LEFT",
+      "text": "#### Escuchar para creer. \nLos AirPods Max reinventan los audífonos de diadema. El controlador dinámico diseñado por Apple te ofrece un sonido inmersivo de alta fidelidad. \n Cada elemento, desde la diadema hasta las almohadillas, está pensado para brindarte un ajuste excepcional. La Cancelación Activa de Ruido líder en la industria bloquea el ruido exterior, y el modo Ambiente te permite escuchar todo lo que ocurre a tu alrededor. Además, el audio espacial con seguimiento dinámico del movimiento de la cabeza crea un sonido envolvente como si estuvieras en el cine. \n-   Controlador dinámico diseñado por Apple para un sonido de alta fidelidad \n- Cancelación Activa de Ruido que bloquea el ruido exterior para que puedas sumergirte por completo en lo que estás escuchando\n-   Modo Ambiente para que escuches todo lo que ocurre a tu alrededor y puedas interactuar con tu entorno\n-   Audio espacial con seguimiento dinámico del movimiento de la cabeza para crear un sonido envolvente como en el cine1\n-   Audio computacional que combina un diseño acústico con el chip H1 y el software de Apple para brindar un sonido revolucionario\n-   Diseñados con una diadema de malla tejida y almohadillas de espuma viscoelástica para un ajuste excepcional\n-   Fácil configuración, sistema de detección de uso y cambio inmediato de dispositivo para ofrecer una experiencia mágica2\n-   Comparte fácilmente lo que estás escuchando entre dos pares de AirPods conectados a tu iPhone, iPad, iPod touch o Apple TV-   20 horas de audio, reproducción de video y llamadas con la Cancelación Activa de Ruido y el audio espacial activados \n-   Consumo de energía ultrabajo cuando están guardados en la delgada funda Smart Case \n- Disponibles en color plata, gris espacial, azul cielo, verde y rosa. \n1. El audio espacial funciona con películas, programas de TV y videos en apps compatibles. Requiere un iPhone o iPad. \n2. Requiere una cuenta de iCloud y macOS 11.1, iOS 14.3, iPadOS 14.3, watchOS 7.2 o tvOS 14.3 o posterior. \n3. La duración de la batería varía según el uso y la configuración. Para obtener más información, visita apple.com/cl/batteries. ",
+      "blockClass": "pdp__description--text"
+    }
+  },
+  "rich-text#pdp__data-sheet--text": {
+    "title": "breadCrumb",
+    "props": {
+      "textAlignment": "LEFT",
+      "textPosition": "LEFT",
+      "text": "inicio / mac",
+      "blockClass": "global__mac--breadCrumb"
+    }
   }
 }
