--- a/manifest.json
+++ b/manifest.json
@@ -56,5 +56,8 @@
     "vtex.modal-layout": "0.x",
     "vtex.disclosure-layout": "1.x"
   },
+  "peerDependencies": {
+    "vtex.questions-and-answers": "0.x"
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
