--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -7,6 +7,7 @@
         ]
     },
     "flex-layout.row#global__product__row1": {
+        "title": "contenedor principal",
         "children": [
             "flex-layout.col#global__product__row1__col1",
             "flex-layout.col#global__product__row1__col2"
@@ -19,6 +20,7 @@
         }
     },
     "flex-layout.col#global__product__row1__col1": {
+        "title": "contenedor de imagenes",
         "children": [
             "product-images"
         ],
@@ -27,12 +29,14 @@
         }
     },
     "product-images": {
+        "title": "imagenes",
         "props": {
             "displayThumbnailsArrows": true,
             "aspectRatio": "1:1"
         }
     },
     "flex-layout.col#global__product__row1__col2": {
+        "title": "contenedor detalle de los productos",
         "children": [
             "breadcrumb#global__breadcrumb--pdp",
             "vtex.store-components:product-name",
@@ -52,6 +56,7 @@
         }
     },
     "flex-layout.row#global__product__row2": {
+        "title": "contenedor inferior de compra",
         "children": [
             "flex-layout.col#global__product__row2__col1",
             "flex-layout.col#global__product__row2__col2"
@@ -63,6 +68,7 @@
         }
     },
     "flex-layout.col#global__product__row2__col1": {
+        "title": "nombre del producto",
         "children": [
             "vtex.store-components:product-name"
         ],
@@ -72,15 +78,17 @@
         }
     },
     "flex-layout.col#global__product__row2__col2": {
+        "title":"contenedor cantidad y botón de compra",
         "children": [
            
             "vtex.store-components:product-price",
             "product-quantity",
-            "add-to-cart-button"
+            "add-to-cart-button#pdp__button"
         ],
         "props": {
             "verticalAlign": "middle",
-            "horizontalAlign": "left"
+            "horizontalAlign": "left",
+            "blockClass":"global__product__row2__col2"
         }
     },
     "flex-layout.row#global__product__row3":{
@@ -96,5 +104,10 @@
         "children": [
             "tab-layout#global__pdp"
         ]
+    },
+    "add-to-cart-button#pdp__button":{
+        "props": {
+            "blockClass":"pdp__button"
+        }
     }
 }
