--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,8 @@
     "vtex.product-highlights": "2.x",
     "vtex.product-price": "1.x",
     "vtex.modal-layout": "0.x",
-    "vtex.disclosure-layout": "1.x"
+    "vtex.disclosure-layout": "1.x",
+    "itgloberspartnercl.whatsapp-button": "0.x"
   },
   "peerDependencies": {
     "vtex.questions-and-answers": "0.x"
