--- a/manifest.json
+++ b/manifest.json
@@ -55,7 +55,8 @@
     "vtex.product-price": "1.x",
     "vtex.modal-layout": "0.x",
     "vtex.disclosure-layout": "1.x",
-    "itgloberspartnercl.whatsapp-button": "0.x"
+    "itgloberspartnercl.whatsapp-button": "0.x",
+    "itgloberspartnercl.bullets-diagramation": "0.x"
   },
   "peerDependencies": {
     "vtex.questions-and-answers": "0.x"
