--- a/store/blocks/global/components/footer-menu.jsonc
+++ b/store/blocks/global/components/footer-menu.jsonc
@@ -1,120 +1,203 @@
 {
-    "vtex.menu@2.x:menu#global__footer_menu--us": {
-      "title": "menu del footer nosotros",
-        "children": [
-            "menu-item#tiendas",   "menu-item#frequentQuestions", "menu-item#support",    "menu-item#queries","menu-item#TermsAndConditions",
-            "menu-item#WorkWithUs", "menu-item#IntegrityChannel"
-        ],
-        "props": {
-            "blockClass": ["global__footer_menu--us"]
-        }
+  "vtex.menu@2.x:menu#global__footer_menu--us": {
+    "title": "menu del footer nosotros",
+    "children": [
+      "menu-item#tiendas",
+      "menu-item#frequentQuestions",
+      "menu-item#support",
+      "menu-item#queries",
+      "menu-item#TermsAndConditions",
+      "menu-item#WorkWithUs",
+      "menu-item#IntegrityChannel"
+    ],
+    "props": {
+      "blockClass": [
+        "global__footer_menu--us"
+      ]
+    }
+  },
+  "menu-item#tiendas": {
+    "props": {
+      "id": "menu-item-tiendas",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "/tiendas",
+        "noFollow": false,
+        "tagTitle": "Tiendas",
+        "text": "Tiendas"
+      }
+    }
+  },
+  "menu-item#frequentQuestions": {
+    "props": {
+      "id": "menu-item-frequentQuestions",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "/preguntas-frecuentes",
+        "noFollow": false,
+        "tagTitle": "frequentQuestions",
+        "text": "Preguntas Frecuentes"
+      }
+    }
+  },
+  "menu-item#support": {
+    "props": {
+      "id": "menu-item-support",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "support",
+        "text": "Soporte"
+      }
+    }
+  },
+  "menu-item#queries": {
+    "props": {
+      "id": "menu-item-queries",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "",
+        "text": "Consultas"
+      }
+    }
+  },
+  "menu-item#TermsAndConditions": {
+    "props": {
+      "id": "menu-item-TermsAndConditions",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "TermsAndConditions",
+        "text": "Términos y Condiciones"
+      }
+    }
+  },
+  "menu-item#WorkWithUs": {
+    "props": {
+      "id": "menu-item-WorkWithUs",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "WorkWithUs",
+        "text": "Trabaja con nosotros"
+      }
+    }
+  },
+  "menu-item#IntegrityChannel": {
+    "props": {
+      "id": "menu-item-IntegrityChannel",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "IntegrityChannel",
+        "text": "Canal de Integridad"
+      }
+    }
+  },
+  "vtex.menu@2.x:menu#global__footer_menu--products": {
+    "title": "menu del footer productos",
+    "children": [
+      "menu-item#mac-footer",
+      "menu-item#ipad-footer",
+      "menu-item#iphone-footer",
+      "menu-item#watch-footer",
+      "menu-item#appletv-footer"
+    ],
+    "props": {
+      "blockClass": [
+        "global__footer_menu--products"
+      ]
+    }
+  },
+  "menu-item#mac-footer": {
+    "props": {
+      "id": "menu-item-mac",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "/mac",
+        "noFollow": false,
+        "tagTitle": "Mac",
+        "text": "Mac"
       },
-      "menu-item#tiendas": {
-        "props": {
-          "id": "menu-item-tiendas",
-          "type": "custom",
-          "highlight": false,
-          "itemProps": {
-            "type": "internal",
-            "href": "/tiendas",
-            "noFollow": false,
-            "tagTitle": "Tiendas",
-            "text": "Tiendas"
-          }
+      "iconPosition": "right"
+    }
+  },
+  "menu-item#ipad-footer": {
+    "props": {
+      "id": "menu-item-ipad",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "Ipad",
+        "text": "Ipad"
       }
-    },
-    "menu-item#frequentQuestions": {
-        "props": {
-          "id": "menu-item-frequentQuestions",
-          "type": "custom",
-          "highlight": false,
-          "itemProps": {
-            "type": "internal",
-            "href": "/preguntas-frecuentes",
-            "noFollow": false,
-            "tagTitle": "frequentQuestions",
-            "text": "Preguntas Frecuentes"
-          }
+    }
+  },
+  "menu-item#iphone-footer": {
+    "props": {
+      "id": "menu-item-iphone",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "Iphone",
+        "text": "Iphone"
       }
-    },
-    "menu-item#support": {
-        "props": {
-          "id": "menu-item-support",
-          "type": "custom",
-          "highlight": false,
-          "itemProps": {
-            "type": "internal",
-            "href": "https://www.maconline.com/t/mac",
-            "noFollow": false,
-            "tagTitle": "support",
-            "text": "Soporte"
-          }
+    }
+  },
+  "menu-item#watch-footer": {
+    "props": {
+      "id": "menu-item-watch",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "Watch",
+        "text": "Watch"
       }
-    },
-    "menu-item#queries": {
-        "props": {
-          "id": "menu-item-queries",
-          "type": "custom",
-          "highlight": false,
-          "itemProps": {
-            "type": "internal",
-            "href": "https://www.maconline.com/t/mac",
-            "noFollow": false,
-            "tagTitle": "",
-            "text": "Consultas"
-          }
+    }
+  },
+  "menu-item#appletv-footer": {
+    "props": {
+      "id": "menu-item-appletv",
+      "type": "custom",
+      "highlight": false,
+      "itemProps": {
+        "type": "internal",
+        "href": "https://www.maconline.com/t/mac",
+        "noFollow": false,
+        "tagTitle": "AppleTv",
+        "text": "AppleTv"
       }
-    },
-    "menu-item#TermsAndConditions": {
-        "props": {
-          "id": "menu-item-TermsAndConditions",
-          "type": "custom",
-          "highlight": false,
-          "itemProps": {
-            "type": "internal",
-            "href": "https://www.maconline.com/t/mac",
-            "noFollow": false,
-            "tagTitle": "TermsAndConditions",
-            "text": "Términos y Condiciones"
-          }
-      }
-    },
-    "menu-item#WorkWithUs": {
-        "props": {
-          "id": "menu-item-WorkWithUs",
-          "type": "custom",
-          "highlight": false,
-          "itemProps": {
-            "type": "internal",
-            "href": "https://www.maconline.com/t/mac",
-            "noFollow": false,
-            "tagTitle": "WorkWithUs",
-            "text": "Trabaja con nosotros"
-          }
-      }
-    },
-    "menu-item#IntegrityChannel": {
-        "props": {
-          "id": "menu-item-IntegrityChannel",
-          "type": "custom",
-          "highlight": false,
-          "itemProps": {
-            "type": "internal",
-            "href": "https://www.maconline.com/t/mac",
-            "noFollow": false,
-            "tagTitle": "IntegrityChannel",
-            "text": "Canal de Integridad"
-          }
-      }
-    },
-    "vtex.menu@2.x:menu#global__footer_menu--products": {
-      "title": "menu del footer productos",
-        "children": [
-            "menu-item#mac","menu-item#ipad", "menu-item#iphone","menu-item#watch", "menu-item#appletv"
-        ],
-        "props": {
-            "blockClass": ["global__footer_menu--products"]
-        }
-      }
-
+    }
+  }
 }
