--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,8 @@
     "vtex.modal-layout": "0.x",
     "vtex.disclosure-layout": "1.x",
     "itgloberspartnercl.whatsapp-button": "0.x",
-    "itgloberspartnercl.bullets-diagramation": "0.x"
+    "itgloberspartnercl.bullets-diagramation": "0.x",
+    "itgloberspartnercl.add-to-cart-info": "0.x"
   },
   "peerDependencies": {
     "vtex.questions-and-answers": "0.x"
