--- a/store/blocks/global/components/minicart.jsonc
+++ b/store/blocks/global/components/minicart.jsonc
@@ -50,10 +50,25 @@
     }
   },
   "flex-layout.col#minicart__footer": {
-    "children": ["minicart-summary", "minicart-checkout-button"],
+    "children": ["minicart-summary#new", "minicart-checkout-button"],
     "props": {
       "blockClass": "minicart__footer__row__col",
       "width":"100%"
+    }
+  },
+  "minicart-summary#new": {
+    "blocks": ["checkout-summary.compact#minicart"]
+  },
+  "checkout-summary.compact#minicart": {
+    "children": ["summary-totalizers#minicart"],
+    "props": {
+      "totalizersToShow": ["Items", "Discounts"]
+    }
+  },
+  "summary-totalizers#minicart": {
+    "props": {
+      "showTotal": true,
+      "showDeliveryTotal": false
     }
   }
 }
