--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -26,63 +26,63 @@
           "image": "assets/images/macbook_pro.jfif",
           "titleBullet": "Mac",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/puerta-triplex-okume/p"
           }
         },
         {
           "image": "assets/images/iphone-14-pro.png",
           "titleBullet": "Iphone",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/zapatos-vans-url/p"
           }
         },
         {
           "image": "assets/images/gps-lte.png",
           "titleBullet": "Watch",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/sol/p"
           }
         },
         {
           "image": "assets/images/gps-lte.png",
           "titleBullet": "Watch",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/cemento-argos-gris-50kg/p"
           }
         },
         {
           "image": "assets/images/gps-lte.png",
           "titleBullet": "Watch",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/ladrillo-estructural-prensado-salmon-245x12x6cm/p"
           }
         },
         {
           "image": "assets/images/gps-lte.png",
           "titleBullet": "Watch",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/sol/p"
           }
         },
         {
           "image": "assets/images/gps-lte.png",
           "titleBullet": "Watch",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/puerta-triplex-okume/p"
           }
         },
         {
           "image": "assets/images/gps-lte.png",
           "titleBullet": "Watch",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/zapatos-vans-url/p"
           }
         },
         {
           "image": "assets/images/gps-lte.png",
           "titleBullet": "Watch",
           "link": {
-            "url": "http://www.google.cl"
+            "url": "/puerta-triplex-okume/p"
           }
         }
       ]
